se implemento plantillas, se modifico el models, se agrego la validacion de usuario, y se coloco una plantilla de dise;o

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,11 +1,4 @@
-<html>
-<head>
-  <title>Bienvenidos..... </title>
-</head>
 
-<body>
-<h1>  Esta es mi primer pagina en Django</h1>
-</body>
-
-
-</html>
+{% extends 'blog/base.html' %}
+{% block title %} Inicio - Bienvenidos {% endblock %}
+{% block content %}<br> ESta es mi primer pagina en Django{% endblock %}
