--- a/blog/templates/blog/productos.html
+++ b/blog/templates/blog/productos.html
@@ -1,8 +1,12 @@
-<html>
-<head><title>Lista de Productos</title></head>
-<body>
-<h1> Catalogos de Productos</h1>
 
+{% extends 'blog/base.html' %}
+{% block title %} Lista de Productos {% endblock %}
+{% block content %}
+<h1>Catalogo de Productos:</h1>
+<br>
+{% if user.is_authenticated %}
+<a href={% url "vista_agregar_producto" %} >Agregar nuevo producto</a>
+{% endif %}
 {% if productos %}
         {% for p in productos %}
               <p>{{p.nombre}}</p>
@@ -11,10 +15,5 @@
 {% else %}
         <h2>No existen productos activos a la venta :( </h2>
 
- {% endif%}
-
-
-
-
-</body>
-</html>
+{% endif%}
+{% endblock %}
