--- a/ventas/templates/ventas/addProducto.html
+++ b/ventas/templates/ventas/addProducto.html
@@ -1,3 +1,16 @@
-<html>
-    Agregando Productos
-</html>
+
+{% extends 'blog/base.html' %}
+{% block title %} Agregar Producto {% endblock %}
+{% block content %}
+      <form action="." method="POST">
+          {% csrf_token %}
+          {{ form.as_p}}
+          <input type="submit" value="Grabar">
+          <input type="reset" value= "Limpiar">
+      </form>
+        <br>
+          {{ informacion }}
+<br>
+<a href={% url "vista_producto" %} >Regresar a la lista de Productos </a>
+<br>
+{% endblock %}
